# Game

./: .env.example  .gitignore  CLAUDE.md  README.md  __capture.gd  __capture.gd.uid  __capture.tscn  default_bus_layout.tres  drizzle.config.ts  export_presets.cfg  index.html  map1.tiled-session  package.json  project.godot  tsconfig.json  vercel.json  vite.config.ts
assets/: Terrain - Copy.png.import  bone-16.png.import  cactus-16 (1).png.import  cow-skull-16.png.import  jail-office.png.import  oak-cabin-v2.png.import  sheriff-cabin.png.import  signpost-16.png.import
maps/: Base.json  Bridge.tsx  Cow_brownwhite.tsx  Ground.tsx  Grounddecor.tsx  House Interiors.tsx  House-1.tsj  House-2.tsj  House-3.tsj  Houses.tsx  Int_deco_green.tsx  MiniTown.json  Tanks.json  Tree-1.json  Tree.json  Tree_oak.tsx  Water.tsx  barn.tsx  chicken.tsx  farm_deco.tsx  fence.tsx  grant_software.tsx  home_town.json  home_town.tmj  home_town.tmx  house-asdasdas.tsj  main_hub.json  main_hub.tmx  map1.json  oda.tsx  player house small.tmx  player house.tmx  sadasdasdsad.tsj  sand.tsx  shop_merch.tsx  tent.tsx  tent_hardwae.tsx  treee2.tsj  treee5.tsj  treeee5.tsj  (+4 more)
scenes/: character_editor.tscn  chat_hud.tscn  chicken.tscn  cow.tscn  game.tscn  house_interior.tscn  loading_screen.tscn  lobby_menu.tscn  login.tscn  main_menu.tscn  npc.tscn  open_world.tscn  player.tscn  project_create.tscn  project_journal.tscn  projects_hud.tscn  sheep.tscn  shop_interior.tscn  village.tscn
scripts/: animal.gd  character_editor.gd  character_menu.gd  chat_hud.gd  (+49 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+76 files in other folders)
